crates/oxc_css_parser/tests/error/at-rule/media/no-block.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `{`, but found `<eof>`
  ┌─ no-block.css:2:1
  │
2 │ 
  │ ^


